Fix PairsDemo visibility bug

--- a/src/components/EditWords/EditWords.module.css
+++ b/src/components/EditWords/EditWords.module.css
@@ -131,14 +131,7 @@
   align-items: center;
 }
 
-/* .categoriesSelection {
-  letter-spacing: 2px;
-  font-weight: 600;
-  text-transform: uppercase;
-} */
-
 .tagsWrapper ul {
-  /* margin: 0.5rem 0 0 0; */
   padding: 0;
   width: 100%;
   list-style: none;
@@ -146,9 +139,6 @@
 }
 
 .tagsWrapper li {
-  /* margin: 1rem 0; */
-  /* padding: 1rem; */
-  /* height: 2rem; */
   display: flex;
   align-items: center;
   /* justify-content: space-between; */
@@ -172,7 +162,7 @@
 }
 
 .tagRightWrapper {
-  padding: 1rem 0;
+  padding: 1rem 2rem 0 0;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
